--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.15.3",
     "react-masonry-component": "^6.3.0",
-    "sass": "^1.37.5"
+    "sass": "^1.37.5",
+    "sweetalert2": "^11.1.5"
   },
   "devDependencies": {
     "@types/react": "17.0.17",
