--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.15.3",
     "react-masonry-component": "^6.3.0",
     "sass": "^1.37.5",
+    "sharp": "^0.29.1",
     "sweetalert2": "^11.1.5"
   },
   "devDependencies": {
